# EVONodes

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  Cargo.toml  EVO-daemon-build-Guide.docx  INSTALL  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4
build-aux/snap/: snapcraft.yaml
contrib/: evo_nodes-cli.bash-completion  evo_nodes-qt.pro  evo_nodes-tx.bash-completion  evo_nodesd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  evo_nodes-qt.desktop  evo_nodes-qt.install  evo_nodes-qt.lintian-overrides  evo_nodes-qt.manpages  evo_nodes-qt.protocol  evo_nodesd.bash-completion  evo_nodesd.examples  evo_nodesd.install  evo_nodesd.lintian-overrides  evo_nodesd.manpages  evo_nodesd.postinst  evo_nodesd.postrm  evo_nodesd.service  rules  watch
contrib/devtools/: README.md  copyright_header.py  gen-manpages.sh  github-merge.py  test_deterministic_coverage.sh  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  evo_nodesd.conf  evo_nodesd.init  evo_nodesd.openrc  evo_nodesd.openrcconf  evo_nodesd.service  org.evo_nodes.evo_nodesd.plist
contrib/linearize/: linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: evo_nodes.fc  (+3 more)
depends/: Makefile  README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-memory.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
params/: install-params.sh
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  addressbook.h  addrman.h  amount.h  blockassembler.cpp  blockassembler.h  blocksignature.cpp  blocksignature.h  bloom.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  core_read.cpp  core_write.cpp  cyclingvector.h  evo_nodes-cli-res.rc  evo_nodes-cli.cpp  evo_nodes-tx-res.rc  evo_nodes-tx.cpp  evo_nodesd-res.rc  evo_nodesd.cpp  flatdb.h  hash.h  httpserver.h  init.cpp  (+48 more)
src/qt/: CMakeLists.txt  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  evo_nodes.cpp  evo_nodes.qrc  evo_nodes_locale.qrc  evo_nodesstrings.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  notificator.h  openuridialog.cpp  openuridialog.h  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  paymentserver.h  rpcconsole.cpp  rpcconsole.h  rpcexecutor.h  transactionfilterproxy.cpp  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  utilitydialog.cpp  walletmodel.cpp  walletmodel.h
src/qt/evo_nodes/: addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactsdropdown.cpp  contactsdropdown.h  createproposaldialog.cpp  createproposaldialog.h  csrow.cpp  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  evo_nodesgui.cpp  evo_nodesgui.h  expandablebutton.cpp  focuseddialog.cpp  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  governancemodel.cpp  governancemodel.h  governancewidget.cpp  governancewidget.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  masternodeswidget.cpp  (+53 more)
src/qt/evo_nodes/forms/: addresseswidget.ui  coldstakingwidget.ui  createproposaldialog.ui  dashboardwidget.ui  governancewidget.ui  lockunlock.ui  masternodeswidget.ui  proposalcard.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendmultirow.ui  topbar.ui  votedialog.ui  welcomecontentwidget.ui
src/qt/evo_nodes/res/css/: style_dark.css  style_light.css
src/qt/evo_nodes/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/evo_nodes/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswalletoptionswidget.ui  settingswidget.ui
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  intro.ui  openuridialog.ui  rpcconsole.ui
src/qt/locale/: evo_nodes_bn.ts  evo_nodes_de.ts  evo_nodes_en.ts  evo_nodes_es.ts  evo_nodes_es_ES.ts  evo_nodes_fa.ts  evo_nodes_fr_FR.ts  evo_nodes_hr_HR.ts  evo_nodes_ko_KR.ts  evo_nodes_nl.ts  evo_nodes_pl.ts  evo_nodes_pt.ts  evo_nodes_pt_BR.ts  evo_nodes_sv.ts
src/qt/res/: evo_nodes-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: test_main.cpp  uritests.cpp
test/: README.md
(+397 files in other folders)
